--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-Hello World
-
-Wojtek Cyrana
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Strona</title>
+    </head>
+    <body>
+        Legia
+    </body>
+</html>
