--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Strona</title>
     </head>
     <body>
-        Legia
+        <p id="text1">Kocham Fifke</p>
+        <h1>Wojtek</h1>
     </body>
 </html>
