--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Strona</title>
     </head>
     <body>
-        <p id="text1">Kocham Fifke</p>
+        <p id="text1">Strona na informatyke</p>
         <h1>Wojtek</h1>
     </body>
 </html>
