Update and rename strona.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>TME to ściek</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css"/>
     </head>
     <body>
         <img id="zdjecie" src="zdjecie.png">
