--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>TME to ściek</title>
-        <link rel="stylesheet" href="/style.css"/>
+        <link rel="stylesheet" href="https://cytrus3927.github.io/style.css">
     </head>
     <body>
-        <img id="zdjecie" src="zdjecie.png">
+        <img id="zdjecie" src="https://cytrus3927.github.io/zdjecie.png">
         <button href="#" class="Poprzedni">Poprzedni</button>
         <a href="#" class="Nastepny">Nastepny</a>
         <p id="tekst1">"Kiedy się śmieje dziecko, śmieje się cały świat" Janusz Korczak</p>
