Update and rename strona2.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Nowe Warpno</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="https://cytrus3927.github.io/style.css">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
   <nav>
     <ul>
       <li><a href="#">Nowe Warpno</a></li>
-      <li><a href="strona.html">Paris</a></li>
+      <li><a href="https://cytrus3927.github.io/strona2.html">Paris</a></li>
       <li><a href="#">Tokyo</a></li>
     </ul>
   </nav>
