--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Nowe Warpno</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cytrus3927.github.io/style.css">
+<link rel="stylesheet" href="https://cytrus3927.github.io/style2.css">
 </head>
 <body>
 
