--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
   <article>
     <h1 id="tytul">Nowe Warpno</h1>
-    <img id="warpno_zdj" src="Warpno.jpg">
+    <img id="warpno_zdj" src="https://cytrus3927.github.io/style.css/Warpno.jpeg">
     <p id="warpno_opis">Nowe Warpno (niem. Neuwarp) – miasto w północno-zachodniej Polsce, w województwie zachodniopomorskim, w powiecie polickim, siedziba gminy miejsko-wiejskiej Nowe Warpno, położone na Półwyspie Nowowarpieńskim, nad Zalewem Szczecińskim i Jeziorem Nowowarpieńskim. Posiada prawa miejskie od ok. 1295 r.<br><br>Według danych z 31 grudnia 2010 r. miasto miało 1237 mieszkańców</p>
   </article>
 </section>
